--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نظام تقارير المرور الطبية</title>
+    <title> تقارير المرور </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
 
     <div class="container">
         <div class="app-header fade-in">
-            <h1 class="app-title">نظام تقارير المرور الطبية</h1>
+            <h1 class="app-title"> تقارير المرور </h1>
             <p class="app-subtitle">نظام إدارة تقارير المرور على المستشفيات والمراكز الصحية</p>
         </div>
 
