--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/print.css" media="print">
 </head>
 <body>
     <div class="loading-overlay" id="loadingOverlay">
@@ -21,7 +22,7 @@
 
     <div class="container">
         <div class="app-header fade-in">
-            <h1 class="app-title">نظام تقارير المرور الطبية</h1>
+            <h1 class="app-title"> تقارير المرور </h1>
             <p class="app-subtitle">نظام إدارة تقارير المرور على المستشفيات والمراكز الصحية</p>
         </div>
 
